# messaging-lib

./: pyproject.toml
src/pattern_agentic_messaging/: app.py  config.py
